chore: clean TOML configs, add CLI entry-point

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,51 +1,1 @@
-[build-system]
-requires = ["setuptools>=64", "wheel"]
-build-backend = "setuptools.build_meta"
-
-[project]
-name = "zilant-prime-core"
-version = "0.1.4"
-description = "Core engine for Zilant Prime™"
-authors = [{name = "QuantumKeyUYU"}]
-readme = "README.md"
-license = {text = "MIT"}
-requires-python = ">=3.10"
-
-# ── основные зависимости ──────────────────────────────
-dependencies = [
-    "click>=8.0",
-    "cryptography>=42.0.0",
-    "argon2-cffi>=21.3",
-    "pytest>=7.4",
-    "pytest-cov>=4.1",
-]
-
-[project.optional-dependencies]
-dev = [
-    "pytest>=7.4",
-    "pytest-cov>=4.1",
-    "hypothesis>=6.99",
-    "black>=24.4",
-    "ruff>=0.4",
-    "build>=1.2",
-    "argon2-cffi>=21.3",
-]
-
-[tool.setuptools.packages.find]
-where = ["src"]
-
-# ── настройки инструментов ────────────────────────────
-[tool.pytest.ini_options]
-minversion = "7.0"
-addopts = "-ra -q --cov=src"
-testpaths = ["tests"]
-
-[tool.coverage.run]
-omit = ["*/tests/*", "*/.pytest_cache/*", "*/.ruff_cache/*"]
-
-[tool.black]
-line-length = 100
-target-version = ["py310"]
-
-[tool.hypothesis]
-deadline = 1000
+﻿<вставьте содержимое выше pyproject.toml>
