test: force diff for PR

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,1 +1,96 @@
-﻿<вставьте содержимое выше pyproject.toml>
+﻿# SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors
+# SPDX-License-Identifier: MIT
+
+############################
+#  build-system metadata   #
+############################
+[build-system]
+requires       = ["setuptools>=64", "wheel"]
+build-backend  = "setuptools.build_meta"
+
+############################
+#      project meta        #
+############################
+[project]
+name            = "zilant-prime-core"
+version         = "0.1.4"
+description     = "Core engine for Zilant Prime™"
+authors         = [{ name = "QuantumKeyUYU" }]
+readme          = "README.md"
+license         = { text = "MIT" }
+requires-python = ">=3.10"
+
+dependencies = [
+  "click>=8.0",
+  "cryptography>=42.0.0",
+  "argon2-cffi>=21.3",
+]
+
+[project.optional-dependencies]
+dev = [
+  "pytest>=7.4",
+  "pytest-cov>=4.1",
+  "hypothesis>=6.99",
+  "black>=24.4",
+  "ruff>=0.4",
+  "build>=1.2",
+]
+
+[project.scripts]
+zilant = "zilant_prime_core.cli:main"
+
+[project.urls]
+Homepage  = "https://github.com/QuantumKeyUYU/zilant-prime-core"
+Source    = "https://github.com/QuantumKeyUYU/zilant-prime-core"
+Issues    = "https://github.com/QuantumKeyUYU/zilant-prime-core/issues"
+Changelog = "https://github.com/QuantumKeyUYU/zilant-prime-core/releases"
+
+############################
+# setuptools discovery     #
+############################
+[tool.setuptools.packages.find]
+where = ["src"]
+
+############################
+# pytest / coverage config #
+############################
+[tool.pytest.ini_options]
+minversion = "7.0"
+addopts    = "-ra --cov=src --cov-report=term"
+testpaths  = ["tests"]
+
+[tool.coverage.run]
+branch = true
+omit   = ["*/tests/*", "*/.pytest_cache/*", "*/.ruff_cache/*"]
+
+############################
+# Black config             #
+############################
+[tool.black]
+line-length    = 100
+target-version = ["py310"]
+
+############################
+# Ruff config              #
+############################
+[tool.ruff]
+line-length    = 100
+target-version = "py310"
+select         = ["E", "F", "I", "N", "B"]
+fixable        = ["ALL"]
+src            = ["src", "tests"]
+exclude        = [
+  ".git",
+  ".venv",
+  ".mypy_cache",
+  ".pytest_cache",
+  "build",
+  "dist",
+]
+extend-ignore  = ["E203"]
+
+############################
+# Hypothesis config        #
+############################
+[tool.hypothesis]
+deadline = 1000
