--- a/ruff.toml
+++ b/ruff.toml
@@ -1,27 +1,22 @@
-﻿# ruff.toml — конфигурация для Ruff ≥ 0.4
+﻿# ruff.toml — конфигурация для Ruff 0.4+
 
-# базовые параметры
 line-length    = 100
 target-version = "py310"
 
 [lint]
-# включённые категории ошибок
 select = ["E", "F", "I", "N", "B"]
-
-# глобально игнорируемые (слишком шумные) правила
 ignore = [
   "I001",  # порядок импортов (доверяем isort/ruff-isort)
-  "B904",  # рекомендует «raise … from err»
-  "N802",  # snake_case имена функций
+  "B904",  # recommends raise … from
+  "N802",  # snake_case для функций
 ]
 
-# пер-файл-игноры для тестов
 [lint.per-file-ignores]
 "tests/**/*.py" = [
-  "F401",  # unused import
-  "F841",  # unused variable
+  "F401",  # неиспользуемый import
+  "F841",  # неиспользуемая переменная
   "I001",  # порядок импортов
   "E501",  # длина строки
-  "E702",  # несколько stmt на строке
+  "E702",  # несколько stmts на строке
   "B904",  # raise-from
 ]
