--- a/ruff.toml
+++ b/ruff.toml
@@ -1,22 +1,27 @@
-﻿# ruff.toml — конфигурация для Ruff 0.4+
+﻿# ruff.toml — конфигурация для Ruff ≥ 0.4
 
+# базовые параметры
 line-length    = 100
 target-version = "py310"
 
 [lint]
+# включённые категории ошибок
 select = ["E", "F", "I", "N", "B"]
+
+# глобально игнорируемые (слишком шумные) правила
 ignore = [
-  "I001",  # порядок импортов (доверяем isort/ruff-isort)
-  "B904",  # recommends raise … from
-  "N802",  # snake_case для функций
+  "I001",  # порядок импортов
+  "B904",  # raise-from err
+  "N802",  # snake_case функций
 ]
 
+# пер-файл-игноры для тестов
 [lint.per-file-ignores]
 "tests/**/*.py" = [
-  "F401",  # неиспользуемый import
-  "F841",  # неиспользуемая переменная
+  "F401",  # unused import
+  "F841",  # unused variable
   "I001",  # порядок импортов
   "E501",  # длина строки
-  "E702",  # несколько stmts на строке
+  "E702",  # несколько stmt на строке
   "B904",  # raise-from
 ]
