--- a/.gitignore
+++ b/.gitignore
@@ -7,22 +7,25 @@ __pycache__/
 *.so
 
 # Distribution / packaging
-.Python
 build/
 dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
 *.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+.eggs/
+*.whl
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+.pytest_cache/
+.cache/
+.coverage
+.coverage.*
+htmlcov/
+coverage.xml
+nosetests.xml
+test-results/
 
 # Virtual environments
 .env/
@@ -31,60 +34,34 @@ env/
 venv/
 ENV/
 
-# Pytest / test artifacts
-.pytest_cache/
-.pytest_temp/
-cache/
-.hypothesis/
-coverage.xml
-htmlcov/
-.coverage
-.coverage.*
-nosetests.xml
-*.cover
-
-# Sphinx docs
-docs/_build/
-
-# IDEs and editors
-.vscode/
+# Editor directories and files
 .idea/
+.vscode/
 *.sublime-project
 *.sublime-workspace
-*.iml
-*.sw?
-*~ 
 
 # OS files
 .DS_Store
 Thumbs.db
+desktop.ini
+
+# Mypy
+.mypy_cache/
+.dmypy.json
+
+# Ruff
+.ruff_cache/
+
+# Hypothesis
+.hypothesis/
+
+# Pre-commit caches (but NOT the config file!)
+.pre-commit/
+.pre-commit-config.yaml
+
+# GitHub Actions artifacts
+.github/workflows/*.retry
 
 # Logs and databases
 *.log
-*.sql
 *.sqlite3
-
-# Pre-commit and linters
-.pre-commit-config.yaml
-coverage.xml
-
-# REUSE metadata
-.reuse/
-.reuseignore
-
-# Scripts artifacts (если есть)
-scripts/generated-sbom.*
-scripts/*.out
-
-# Build artifacts from setuptools / wheel
-pyproject.toml
-setup.py
-setup.cfg
-# (не игнорим этот файл, но выше настраивали SPDX-заголовки)
-
-# Temporary test output folders
-.pytest_temp/
-hypothesis_temp/
-
-# Any other local overrides
-local_settings.py
