chore: remove E203 ignore from Ruff config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,7 +69,7 @@ exclude        = [
   "build",
   "dist",
 ]
-extend-ignore  = ["E203"]
+# extend-ignore  = ["E203"]  ← удалено, ruff теперь не будет ругаться
 
 [tool.hypothesis]
 deadline = 1000
