wip: include SPDX headers and CI tweaks

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,31 +1,37 @@
 [pytest]
-testpaths =
-    tests
+# минимальная требуемая версия pytest
+minversion = 7.0
 
-pythonpath =
-    src
+# где искать тесты
+testpaths = tests
 
+# какие файлы считаем тестами
+python_files = test_*.py
+
+# добавить src/ в PYTHONPATH до запуска (альтернатива conftest.py)
+python_paths = src
+
+# опции запуска: покрытие, отчёты и пр.
 addopts =
+    -v
     -ra
-    -q
-    -s
+    --color=yes
+    --showlocals
+    --disable-warnings
+    --maxfail=1
     --durations=10
-    --strict-markers
-    --cov=zilant_prime_core
-    --cov-report=term-missing:skip-covered
-    --cov-report=xml
-    --cov-report=html
+    --cov=src/zilant_prime_core
+    --cov-report=term-missing
+    --cov-report=html:htmlcov
+    --cov-report=xml:coverage.xml
 
-markers =
-    slow:       помечает долгие тесты (–m "not slow" чтобы пропустить)
-    integration:интеграционные (работают с диском / сетью и т.д.)
-    property:   property‑based tests (hypothesis)
-
+# подавлять DeprecationWarning из внешних библиотек
 filterwarnings =
-    ignore::pytest.PytestConfigWarning
-    ignore:pkg_resources is deprecated:DeprecationWarning
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
 
-[coverage:run]
-branch = True
-parallel = True
-source = zilant_prime_core
+# маркеры тестов
+markers =
+    slow: marks tests as slow (deselect with '-m "not slow"')
+    integration: marks integration tests
+    performance: marks performance/load tests
