--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,74 +1,115 @@
-# pyproject.toml
-# SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors
-# SPDX-License-Identifier: MIT
-
+# ───────────────────────── build system ─────────────────────────
 [build-system]
-requires = ["setuptools>=64", "wheel"]
+requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
+# ─────────────────────────── project ────────────────────────────
 [project]
-name            = "zilant-prime-core"
-version         = "0.1.4"
-description     = "Core engine for Zilant Prime™"
-authors         = [{ name = "QuantumKeyUYU" }]
-readme          = "README.md"
-license         = { text = "MIT" }
-requires-python = ">=3.10"
+name = "zilant-prime-core"
+version = "0.1.0"
+description = "Ядро ZILANT Prime™: AEAD, KDF, VDF, контейнер .zil и CLI"
+readme = "README.md"
+license = { file = "LICENSE" }
+authors = [
+  { name = "Ильдар", email = "you@example.com" },
+]
 dependencies = [
-  "click>=8.0",
-  "cryptography>=42.0.0",
-  "argon2-cffi>=21.3",
+  "cryptography>=40.0.0",
+  "argon2-cffi>=21.3.0",
+  "click>=8.1.0",
 ]
 
 [project.optional-dependencies]
 dev = [
-  "pytest>=7.4",
-  "pytest-cov>=4.1",
-  "hypothesis>=6.99",
-  "black>=24.4",
-  "ruff>=0.4",
-  "build>=1.2",
+  "pytest>=7.0.0",
+  "ruff>=0.0.280",
+  "black>=23.1.0",
+  "isort>=5.10.1",
+  "mypy>=0.991",
+  "pre-commit>=2.20.0",
+  "bandit>=1.7.0",
+  "semgrep>=1.18.0",
+  "cyclonedx-bom>=0.16.0",
 ]
-
-[project.scripts]
-zilant = "zilant_prime_core.cli:main"
 
 [project.urls]
-Homepage  = "https://github.com/QuantumKeyUYU/zilant-prime-core"
-Source    = "https://github.com/QuantumKeyUYU/zilant-prime-core"
-Issues    = "https://github.com/QuantumKeyUYU/zilant-prime-core/issues"
-Changelog = "https://github.com/QuantumKeyUYU/zilant-prime-core/releases"
+Homepage        = "https://github.com/yourorg/zilant-prime-core"
+Documentation   = "https://github.com/yourorg/zilant-prime-core#readme"
+"Issue Tracker" = "https://github.com/yourorg/zilant-prime-core/issues"
 
-[tool.setuptools.packages.find]
-where = ["src"]
+# ───────────────────────── tool: Black ──────────────────────────
+[tool.black]
+line-length = 120
+target-version = ["py310"]
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.git
+  | \.hg
+  | \.mypy_cache
+  | \.pytest_cache
+  | build
+  | dist
+  | \.venv
+)/
+'''
 
+# ───────────────────────── tool: isort ──────────────────────────
+[tool.isort]
+profile = "black"
+line_length = 120
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+known_first_party = ["zilant_prime_core"]
+default_section = "THIRDPARTY"
+
+# ────────────────────────── tool: Ruff ──────────────────────────
+[tool.ruff]
+line-length = 120
+exclude = ["build", "dist", ".git", ".venv", "__pycache__"]
+select = ["E", "F", "W", "C90", "B"]
+ignore = ["E402", "B904", "C901"]
+
+[tool.ruff.per-file-ignores]
+"tests/**/*.py" = ["F841"]
+
+[tool.ruff.mccabe]
+max-complexity = 12
+
+# ────────────────────────── tool: MyPy ──────────────────────────
+[tool.mypy]
+python_version           = "3.10"
+check_untyped_defs       = true
+disallow_untyped_defs    = true
+disallow_incomplete_defs = true
+strict_optional          = true
+ignore_missing_imports   = true
+warn_unused_configs      = true
+warn_return_any          = false
+warn_unreachable         = false
+exclude                  = '^(src/zil\.py|src/zilant_prime_core/scripts/)'
+
+# ───────────────────────── tool: pytest ─────────────────────────
 [tool.pytest.ini_options]
-minversion = "7.0"
-addopts    = "-ra --cov=src --cov-report=term"
-testpaths  = ["tests"]
+minversion     = "7.0"
+addopts        = "-vv --showlocals --disable-warnings --maxfail=1 --durations=10"
+testpaths      = ["src", "tests"]
+xfail_strict   = true
+filterwarnings = ["error"]
 
+# ──────────────────────── tool: coverage ────────────────────────
 [tool.coverage.run]
 branch = true
-omit   = ["*/tests/*", "*/.pytest_cache/*", "*/.ruff_cache/*"]
-
-[tool.black]
-line-length    = 100
-target-version = ["py310"]
-
-[tool.ruff]
-line-length    = 100
-target-version = "py310"
-select         = ["E", "F", "I", "N", "B", "UP", "ARG"]
-fixable        = ["ALL"]
-src            = ["src", "tests"]
-exclude        = [
-  ".git",
-  ".venv",
-  ".mypy_cache",
-  ".pytest_cache",
-  "build",
-  "dist",
+source = ["src"]
+omit = [
+  "tests/*",
+  "docs/*",
+  "setup.py",
 ]
 
-[tool.hypothesis]
-deadline = 1000
+[tool.coverage.report]
+show_missing = true
+skip_empty    = true
+precision     = 2
