--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ruff black isort
+          pip install --upgrade ruff black isort
 
       - name: Ruff (lint)
         run: ruff check src tests
@@ -89,7 +89,7 @@ jobs:
   test:
     name: ✅ Test Matrix & Coverage
     runs-on: ubuntu-latest
-    needs: [ lint-format, security ]
+    needs: [lint-format, security]
     strategy:
       matrix:
         python-version: [3.10, 3.11, 3.12]
@@ -180,7 +180,7 @@ jobs:
   build:
     name: 🎁 Build Distributions
     runs-on: ubuntu-latest
-    needs: [ repro-build, sbom ]
+    needs: [repro-build, sbom]
 
     steps:
       - name: Checkout code
