--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,109 +1,62 @@
-name: Foundation CI
+name: CI
 
 on:
   push:
     branches: [ main ]
-    tags: [ 'v*' ]
   pull_request:
-  workflow_dispatch:
+    branches: [ main ]
 
-env:
-  PYTHON_VERSIONS: [ '3.10', '3.11', '3.12' ]
+permissions:
+  contents: read
+  packages: read
 
 jobs:
-  # ──────────────────────────── 0.1–0.4 Lint & Format ────────────────────────────
   lint-format:
-    name: 🔍 Lint & Format
+    name: 🔍 Ruff / Black / MyPy
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ${{ env.PYTHON_VERSIONS }}
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dev dependencies
-        run: |
-          pip install ruff black isort mypy pytest coverage bandit markdownlint-cli syft
-      - name: Lint (ruff)
-        run: ruff check src tests
-      - name: Format (black & isort)
-        run: |
-          black --check src tests
-          isort --check-only src tests
-      - name: Type-check (mypy)
-        run: mypy src
 
-  # ──────────────────────────── 0.5 Tests & Coverage ────────────────────────────
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
+
+      - name: Install dev deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install .[dev]
+
+      - name: Run linters
+        run: |
+          ruff check src tests
+          black --check src tests
+          mypy src
+
   tests:
-    name: 🧪 Tests & Coverage
+    name: ✅ PyTest (matrix)
     needs: lint-format
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        python-version: ${{ env.PYTHON_VERSIONS }}
+        python-version: ['3.10', '3.11', '3.12', '3.13']
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: pip install -e .[dev]
-      - name: Run tests
+
+      - name: Install dev deps
         run: |
-          pytest --cov=src --junitxml=pytest-report.xml
-      - name: Upload coverage report
-        uses: codecov/codecov-action@v3
-        with:
-          files: coverage.xml
+          python -m pip install --upgrade pip
+          pip install .[dev]
 
-  # ──────────────────────────── 0.6 Security Scan ───────────────────────────────
-  security-scan:
-    name: 🔒 Security Scan
-    needs: tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install SBOM tool
-        run: pip install syft
-      - name: Generate SBOM
-        run: syft . -o cyclonedx-json=sbom.json
-      - name: Trivy Scan
-        uses: aquasecurity/trivy-action@v0.7
-        with:
-          input: sbom.json
-      - name: Grype Scan
-        uses: anchore/grype-action@v1
-        with:
-          file: sbom.json
+      - name: Run tests + coverage
+        run: |
+          pytest -q --cov=src/zilant_prime_core --cov-report=xml --disable-warnings
 
-  # ──────────────────────────── 0.7 Build & Publish ────────────────────────────
-  build-publish:
-    name: 📦 Build & Publish
-    needs: security-scan
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v4
+      - name: Upload coverage XML
+        uses: actions/upload-artifact@v3
         with:
-          python-version: 3.12
-      - name: Install build tool
-        run: pip install build
-      - name: Build distributions
-        run: python -m build
-      - name: Sign artifacts with Cosign
-        uses: sigstore/cosign-action@v1
-        with:
-          command: sign
-          annotations: artifact=v0.1-core-ready
-          key: ${{ secrets.COSIGN_KEY }}
-      - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
-          skip-existing: true
+          name: coverage-${{ matrix.python-version }}
+          path: coverage.xml
