--- a/.github/workflows/vault-secrets.yml
+++ b/.github/workflows/vault-secrets.yml
@@ -1,22 +1,49 @@
 name: Vault Secret Injection
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:      # вручную из UI
+  push:
+    branches: [ "main" ]  # или отключите, если не нужно
+
+permissions:
+  contents: read          # чтобы checkout сработал
 
 jobs:
-  vault:
+  fetch-and-test:
+    # ⬇️  если нет URL — job просто пропускается
+    if: ${{ secrets.VAULT_URL != '' }}
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
 
-      - name: Fetch and Inject Vault Secrets
-        uses: hashicorp/vault-action@v2.2.0
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      # 1) Аутентификация в Vault
+      - name: Authenticate with Vault
+        id: vault-auth
+        uses: hashicorp/vault-action@v2
         with:
-          url: ${{ secrets.VAULT_ADDR }}
-          method: approle
-          roleId: ${{ secrets.VAULT_ROLE_ID }}
-          secretId: ${{ secrets.VAULT_SECRET_ID }}
-          secrets: |
-            secret/data/zilant  mysecret  VAULT_TOKEN
-      - name: Use secret
-        run: echo "Secret length: ${#VAULT_TOKEN}"
+          url:      ${{ secrets.VAULT_URL }}
+          token:    ${{ secrets.VAULT_TOKEN }}
+          # method: approle / github / oidc — как у вас настроено
+          # role:   ${{ secrets.VAULT_ROLE }}
+
+      # 2) Забираем секреты
+      - name: Fetch application secrets
+        id: secrets
+        uses: hashicorp/vault-action@v2
+        with:
+          url:      ${{ secrets.VAULT_URL }}
+          token:    ${{ steps.vault-auth.outputs.token }}
+          secrets:  |
+            secret/data/zilant #path username | VAULT_USER ;
+            secret/data/zilant #path password | VAULT_PASS ;
+
+      # 3) Прогоняем тесты/линтер с инжект‑секретами
+      - name: Run tests with Vault secrets
+        env:
+          VAULT_USER: ${{ steps.secrets.outputs.VAULT_USER }}
+          VAULT_PASS: ${{ steps.secrets.outputs.VAULT_PASS }}
+        run: |
+          echo "Secrets OK (user=$VAULT_USER)"
+          # pytest или любой другой шаг
