--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,62 +1,62 @@
-name: CI
+name: Foundation CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ main ]
+    branches: [ "main" ]
 
+# нужно для выгрузки SARIF и Codecov
 permissions:
   contents: read
-  packages: read
+  security-events: write
 
 jobs:
   lint-format:
-    name: 🔍 Ruff / Black / MyPy
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.13'
-
-      - name: Install dev deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install .[dev]
-
-      - name: Run linters
-        run: |
-          ruff check src tests
-          black --check src tests
-          mypy src
-
-  tests:
-    name: ✅ PyTest (matrix)
-    needs: lint-format
+    name: Lint & Format (${{ matrix.python }})
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
       matrix:
-        python-version: ['3.10', '3.11', '3.12', '3.13']
+        python: ["3.11", "3.12", "3.13"]
+
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ matrix.python }}
 
-      - name: Install dev deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install .[dev]
+      - name: Install dev‑deps
+        run: pip install -e .[dev]
 
-      - name: Run tests + coverage
-        run: |
-          pytest -q --cov=src/zilant_prime_core --cov-report=xml --disable-warnings
+      - name: Ruff
+        run: ruff check src tests
+      - name: Black
+        run: black --check src tests
+      - name: Isort
+        run: isort --check-only src tests
 
-      - name: Upload coverage XML
-        uses: actions/upload-artifact@v3
+  tests:
+    name: Tests & Coverage (${{ matrix.python }})
+    runs-on: ubuntu-latest
+    needs: lint-format
+    strategy:
+      matrix:
+        python: ["3.13"]          # 100 % тесты нам важны хоть на одной версии
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
         with:
-          name: coverage-${{ matrix.python-version }}
-          path: coverage.xml
+          python-version: ${{ matrix.python }}
+
+      - name: Install dev‑deps
+        run: pip install -e .[dev]
+
+      - name: Run pytest
+        run: |
+          pytest -q --cov=src/zilant_prime_core --cov-report=xml
+
+      - name: Upload coverage
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./coverage.xml
