--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -12,7 +12,6 @@ permissions:
 
 jobs:
   codeql:
-    name: CodeQL (python)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -22,21 +21,14 @@ jobs:
       - uses: github/codeql-action/analyze@v3
 
   semgrep:
-    name: Semgrep scan
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - name: Install Semgrep
-        run: pip install semgrep
-
-      - name: Run Semgrep (CI rules)
-        # --sarif сразу генерит отчёт, "|| true" гарантирует 0‑exit,
-        # чтобы падал только при настоящих ошибках pipeline
+      - run: pip install semgrep
+      - name: Semgrep scan
         run: |
           semgrep scan --config p/ci --sarif --output semgrep.sarif || true
-
       - name: Upload SARIF
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v3    # ⬅️ v3
         with:
           sarif_file: semgrep.sarif
