--- a/.github/workflows/vault-secrets.yml
+++ b/.github/workflows/vault-secrets.yml
@@ -1,30 +1,21 @@
 name: Vault Secret Injection
-
 on:
-  workflow_dispatch:      # вручную из UI
-  push:
-    branches: [ "main" ]  # или отключите, если не нужно
-
+  workflow_dispatch:
 permissions:
-  contents: read          # чтобы checkout сработал
+  contents: read
 
 jobs:
   fetch-and-test:
-    # ⬇️  если нет URL — job просто пропускается
-    if: ${{ secrets.VAULT_URL != '' }}
+    if: ${{ secrets.VAULT_URL }}
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      # 1) Аутентификация в Vault
-      - name: Authenticate with Vault
-        id: vault-auth
+      - uses: actions/checkout@v4
+      - id: vault-auth
         uses: hashicorp/vault-action@v2
         with:
-          url:      ${{ secrets.VAULT_URL }}
-          token:    ${{ secrets.VAULT_TOKEN }}
+          url:   ${{ secrets.VAULT_URL }}
+          token: ${{ secrets.VAULT_TOKEN }}
+  
           # method: approle / github / oidc — как у вас настроено
           # role:   ${{ secrets.VAULT_ROLE }}
 
