--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
-name: Foundation CI
+# .github/workflows/ci.yml
+name: Foundation CI
 
 on:
   push:
@@ -12,7 +13,7 @@ permissions:
 
 jobs:
   lint-format:
-    name: Lint & Format (${{ matrix.python }})
+    name: Lint & Format (${{ matrix.python }})
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -23,16 +24,14 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python }}
-
-      - name: Install dev‑deps
+      - name: Install dev-deps
         run: pip install -e .[dev]
-
       - run: ruff check src tests
       - run: black --check src tests
       - run: isort --check-only src tests
 
   tests:
-    name: Tests & Coverage (${{ matrix.python }})
+    name: Tests & Coverage (${{ matrix.python }})
     runs-on: ubuntu-latest
     needs: lint-format
     strategy:
@@ -45,12 +44,12 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
 
-      - name: Install dev‑deps + pytest‑cov
+      - name: Install dev-deps + test-tools
         run: |
           pip install -e .[dev]
-          pip install pytest-cov              # гарантированно есть плагин
+          pip install pytest-cov hypothesis
 
-      - name: Run tests
+      - name: Run tests & collect coverage
         run: |
           coverage run -m pytest -q
           coverage xml
