--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-# .github/workflows/ci.yml
 name: Foundation CI
 
 on:
@@ -44,17 +43,17 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
 
-      - name: Install dev-deps + test-tools
+      - name: Install test-deps
         run: |
           pip install -e .[dev]
           pip install pytest-cov hypothesis
 
-      - name: Run tests & collect coverage
-        run: |
-          coverage run -m pytest -q
-          coverage xml
+      - name: Run pytest with coverage
+        run: pytest -q --cov=src/zilant_prime_core --cov-report=xml
 
-      - name: Upload coverage
+      - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
-          files: ./coverage.xml
+          files: coverage.xml
+          # не будем падать, если вдруг Coverage.xml пустой
+          fail_ci_if_empty: false
