--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,6 @@
-name: Publish
+# .github/workflows/release.yml
+name: Publish Release
+
 on:
   push:
     tags:
@@ -9,23 +11,38 @@ permissions:
   packages: write
 
 jobs:
-  build-and-publish:
+  build-sign-publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Python 3.12
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
 
       - name: Install build tools
-        run: |
-          python -m pip install --upgrade pip build
+        run: python -m pip install --upgrade pip build
 
       - name: Build distributions
         run: python -m build
+
+      - name: Decode Cosign private key
+        run: |
+          echo "${{ secrets.COSIGN_KEY }}" | base64 -d > cosign.key
+
+      - name: Sign distributions with Cosign
+        run: |
+          for file in dist/*; do
+            cosign sign --key cosign.key "$file"
+          done
+
+      - name: Upload signatures as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: signatures
+          path: dist/*.sig
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
