--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,9 +28,11 @@ jobs:
       - name: Build distributions
         run: python -m build
 
-      - name: Decode Cosign private key
+      # --- вот этот шаг заменён:
+      - name: Write Cosign private key
         run: |
-          echo "${{ secrets.COSIGN_KEY }}" | base64 -d > cosign.key
+          echo "${{ secrets.COSIGN_KEY }}" > cosign.key
+          chmod 600 cosign.key
 
       - name: Sign distributions with Cosign
         run: |
