--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,51 +1,46 @@
 # .github/workflows/release.yml
-#
 name: Publish Release
 
 on:
   push:
+    # при пуше тега вида vX.Y.Z
     tags:
-      - 'v*'
+      - 'v*.*.*'
 
 permissions:
-  contents: read
-  packages: write
+  contents: write     # нужно для загрузки подписи в релиз
+  packages: write     # нужно для пуша в PyPI
 
 jobs:
   build-sign-publish:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Python
+      - name: Setup Python 3.x
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: '3.x'       # например '3.12'
 
       - name: Install build tools
-        run: python -m pip install --upgrade pip build
+        run: |
+          python -m pip install --upgrade pip build
 
       - name: Build distributions
         run: python -m build
 
-      # --- вот этот шаг заменён:
-      - name: Write Cosign private key
-        run: |
-          echo "${{ secrets.COSIGN_KEY }}" > cosign.key
-          chmod 600 cosign.key
-
-      - name: Sign distributions with Cosign
-        run: |
-          for file in dist/*; do
-            cosign sign --key cosign.key "$file"
-          done
-
-      - name: Upload signatures as artifact
-        uses: actions/upload-artifact@v4
+      - name: Sign distributions with Sigstore
+        uses: sigstore/gh-action-sigstore-python@v3
         with:
-          name: signatures
-          path: dist/*.sig
+          # на события release подпишет все артефакты автоматически
+          upload-signing-artifacts: true
+        env:
+          # сюда кладёте приватный ключ cosign без base64!
+          COSIGN_KEY: ${{ secrets.COSIGN_KEY }}
+          # если ключ защищён паролем:
+          # COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
