--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,46 +1,35 @@
 # .github/workflows/release.yml
-name: Publish Release
+name: Publish
 
 on:
   push:
-    # при пуше тега вида vX.Y.Z
     tags:
-      - 'v*.*.*'
+      - 'v*'      # любые теги вида v1.2.3
 
 permissions:
-  contents: write     # нужно для загрузки подписи в релиз
-  packages: write     # нужно для пуша в PyPI
+  contents: read   # для actions/checkout
+  packages: write  # для pypa/gh-action-pypi-publish
 
 jobs:
-  build-sign-publish:
+  build-publish:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
-      - name: Setup Python 3.x
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'       # например '3.12'
+          python-version: '3.x'
 
       - name: Install build tools
-        run: |
-          python -m pip install --upgrade pip build
+        run: python -m pip install --upgrade pip build
 
       - name: Build distributions
         run: python -m build
-
-      - name: Sign distributions with Sigstore
-        uses: sigstore/gh-action-sigstore-python@v3
-        with:
-          # на события release подпишет все артефакты автоматически
-          upload-signing-artifacts: true
-        env:
-          # сюда кладёте приватный ключ cosign без base64!
-          COSIGN_KEY: ${{ secrets.COSIGN_KEY }}
-          # если ключ защищён паролем:
-          # COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
